--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <header>Work in progress... 🚛</header>
+    <h1>While waiting you can check <a href="https://kamack38.github.io" target="_blank">this site</a>.</h1>
 </body>
 </html>
